--- a/.github/workflows/wilco-actions.yml
+++ b/.github/workflows/wilco-actions.yml
@@ -17,7 +17,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "16"
-
+          
+      - name: Update Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install docker-ce docker-ce-cli containerd.io
+          
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.6.0
         with:
